--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [DataBase]
-host=data-engineer-cluster.cyhh5bfevlmn.us-east-1.redshift.amazonaws.com
-port=5439
+host=XXXXXXXXXX
+port=XXXXXXXXXX
 dbname=data-engineer-database
 username=palombopabloe_coderhouse
 password=1bB8WCNgb2
