--- a/config/config.ini
+++ b/config/config.ini
@@ -3,7 +3,7 @@ host=XXXXXXXXXX
 port=XXXXXXXXXX
 dbname=data-engineer-database
 username=palombopabloe_coderhouse
-password=1bB8WCNgb2
+password=xxxxx
 
 [api]
-secret_key=ce5fab734a62c31f4b0515d732605396
+secret_key=cxxxxxxxxx
